컬렉티드 오타 수정하고 하이퍼 링크 추가함

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <a href = "p1.html"> <li>브랜드 마케팅</li></a>
   <li>"야옹이 사진"과 난주 "톰"</li>
   <li>캠핑/랜디야츠 딩기</li>
-  <li>아트플랫폼 & 웹진 "CLLECTED"</li>
+  <li>아트플랫폼 & 웹진 <a href = "https://collected.ondp.app/">COLECTED</a></li>
   </ol>
 
 <div style = "text-align : center"> <img src = "Amateur.jpg" alt="이미지 로딩 실패" width = 60%>
