마케터가 하는 일

--- a/p1.html
+++ b/p1.html
@@ -8,3 +8,23 @@
 
 
 <h1>브랜드 마케터의 일 📚 </h1>
+<p>
+  저는 이런 일을 합니다. 그.... 모든 일을 합니다!
+  <h3>💁‍♂️ 뭐냐면요</h3>
+</p>
+<ol>
+  <li> 마케팅 미디어믹스 수립 </li>
+  <li> 검색, 배너광고 운영 </li>
+  <li> 앱 푸시 발송 </li>
+  <li> 언론 PR </li>
+  <li> 디지털마케팅 전략 수립 </li>
+  <li> 온드미디어 채널 운영 </li>
+  <li> 제휴 마케팅 캠페인 진행 </li>
+  <li> 유저 퍼널 추적 </li>
+  <li> 콘텐츠 기획 & 제작 </li>
+  <li> 광고 소재 디자인 </li>
+  <li> 카피문구 작성 </li>
+  <li> 브랜드 전략 구상 </li>
+  <li> App Search optimization </li></li>
+  <li> 주간 뉴스레터 발행 </li>
+</ol>
