사진을 넣었어요

--- a/p1.html
+++ b/p1.html
@@ -11,14 +11,15 @@
 <p>
   저는 이런 일을 합니다. 그.... 모든 일을 합니다!
   <h3>💁‍♂️ 뭐냐면요</h3>
+  <hr>
 </p>
 <ol>
   <li> 마케팅 미디어믹스 수립 </li>
   <li> 검색, 배너광고 운영 </li>
   <li> 앱 푸시 발송 </li>
   <li> 언론 PR </li>
-  <li> 디지털마케팅 전략 수립 </li>
-  <li> 온드미디어 채널 운영 </li>
+  <li> 디지털마케팅 기획 & 운영 </li>
+  <li> 온드미디어 채널 관리 </li>
   <li> 제휴 마케팅 캠페인 진행 </li>
   <li> 유저 퍼널 추적 </li>
   <li> 콘텐츠 기획 & 제작 </li>
@@ -27,4 +28,8 @@
   <li> 브랜드 전략 구상 </li>
   <li> App Search optimization </li></li>
   <li> 주간 뉴스레터 발행 </li>
+  <li> 마케팅 중장기 로드맵 수립</li>
 </ol>
+<h3>🤸‍♂️ 뭐든지 다 한다</h3>
+<hr>
+<img src="에라.png" alt="몰?루" width="30%">
