전체 사이트 태그를 추가했어요

--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <title> 두 번째로 만든 페이지 </title>
     <meta charset="utf-8">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9JR8X1SBEF"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-9JR8X1SBEF');
+    </script>
+
 </head>
 
 <body>
