동영상을 넣어봤어요

--- a/index.html
+++ b/index.html
@@ -2,17 +2,6 @@
 <html lang="ko">
 <head>
 
-  <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-NTZP395');</script>
-<!-- End Google Tag Manager -->
-
-    <title> 두 번째로 만든 페이지 </title>
-    <meta charset="utf-8">
-
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-9JR8X1SBEF"></script>
     <script>
@@ -22,18 +11,31 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
       gtag('config', 'G-9JR8X1SBEF');
     </script>
-
-</head>
+  </head>
 
 <body>
   <h1> 모두 안녕! </h1>
   <hr>
+
+
+<video
+    src="fire.mp4"
+    width="1280px"
+    height="720px"
+    poster="magic.jpg"
+    cotrols
+    autoplay
+    loop>
+
+</video>
+
 <ol type = "I">
   <a href = "p1.html"> <li>브랜드 마케팅</li></a>
   <li>"야옹이 사진"과 난주 "톰"</li>
   <li>캠핑/랜디야츠 딩기</li>
   <li>아트플랫폼 & 웹진 <a href = "https://collected.ondp.app/">COLECTED</a></li>
   </ol>
+
 
 <div style = "text-align : center"> <img src = "Amateur.jpg" alt="이미지 로딩 실패" width = 60%>
 
@@ -66,16 +68,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </p>
 
 <p>
-  <small> 다음에는 CSS까지 적용해서 멋진 사이트로 돌아올게요 </small>
+  <small> css  </small>
 </p>
 
 
 </body>
-
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NTZP395"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
 
 
 </html>
