--- a/index.html
+++ b/index.html
@@ -9,26 +9,30 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-9JR8X1SBEF');
+      gtag('config', 'G-9JR8.X1SBEF');
     </script>
   </head>
 
-<body>
-  <h1> 모두 안녕! </h1>
-  <hr>
 
+
+
+<body style = "background-color:yellow;">
+
+<h1> <p title = "어휴 너무 오래 걸려"> 모두 안녕! </p> </h1>
+<hr>
+
+<pre>
+Pre 태그를 사용하면
+이렇게 줄바꿈을 할 수
+있죠? 재밌죠?
+</pre>
 
 <video
-    src="fire.mp4"
-    width="1280px"
-    height="720px"
-    poster="magic.jpg"
-    cotrols
-    autoplay
-    loop>
-
+  src="fire.f4v" autoplay muted loop
+  width =100%">
 </video>
-
+<hr>
+<br
 <ol type = "I">
   <a href = "p1.html"> <li>브랜드 마케팅</li></a>
   <li>"야옹이 사진"과 난주 "톰"</li>
@@ -37,10 +41,15 @@
   </ol>
 
 
-<div style = "text-align : center"> <img src = "Amateur.jpg" alt="이미지 로딩 실패" width = 60%>
+<div style = "text-align : center"> <img src = "Amateur.jpg" alt="지금은 이미지를 볼 수 없어요." width = 60%>
+
+<img src = "몰?루.jpg" alt= "alt태그로 이미지가 안 나올 때에 보여주는 글씨도 지정할 수 있네.. 재밌다">
 
 <h3> 홈페이지를 만들어요 </h3></div>
+
+
 <p> HTML에서 시작하는 웹개발 기초를 배운지 <strong>3일 차</strong>가 되는 날입니다. 같이 공부를 하는 친구가 있으니 재미있네요. 저는 취미가 많아서 이 역시 취미로 삼고 있지만 혹시 아나요 <em>Next.Js</em>까지 할 줄 아는 풀스택 개발자가 될지? 지금 벌여놓은 일을 수습하기에 벅차지만 (저는 하루에 6시간만 잔다구요!<abbr title="줄임말"></abbr>) 어쨌든 뭔가를 계속 배우는 건 참 즐거운 일입니다.</p>
+
 </div>
 
 <hr>
@@ -64,11 +73,11 @@
 </div>
 
 <p>
-오늘 점심에는 태어나서 처음으로 평양냉면을 먹었습니다. 매니아들은 정말 좋아하는 것 같던데, 저는 어떤 맛인지 감히 상상이 되지 않았어요. 혹자는 걸레 빤 물이라고 힐난을 하기도 했지만요. 뭐랄까 생각보다는 맛이 있었고 김치를 얹어 먹으니 입 안에서 폭죽이 터지는 것 같았습니다. 그러나 면을 너무 많이 줘서, 다 먹기도 전에 질려버렸습니다.
+오늘 점심에는 태어나서 처음으로 평양냉면을 먹었습니다. 매니아들은 정말 좋아하는 것 같던데, 저는 어떤 맛인지 감히 상상이 되지 않았어요. 혹자는 걸레 빤 물이라고 힐난을 하기도 했지만요. 뭐랄까 생각보다는 맛이 있었고 김치를 얹어 먹으니 입 안에서 폭죽이 터지는 것 같았습니다. 그러나 <a href = "https://search.naver.com/search.naver?sm=tab_hty.top&where=nexearch&query=%EC%9A%B0%EB%9E%98%EC%98%A5&oquery=%EB%A7%9E%EC%B6%A4%EB%B2%95%EA%B2%80%EC%82%AC%EA%B8%B0&tqi=hC1ErsprvmsssQ4wnI8ssssstR4-138009">면</a>을 너무 많이 줘서, 다 먹기도 전에 질려버렸습니다.
 </p>
 
 <p>
-  <small> css  </small>
+  <small> css는 이번 주 금요일에 할 예정이네요, 동영상 재생이 안 되는 이슈가 있어서 2시간 정도를 허비했어요 이런  </small>
 </p>
 
 
