오타를 수정했어요

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Pre 태그를 사용하면
 </pre>
 
 <video
-  src="fire.f4v" autoplay muted loop poster="majic.jpg"
+  src="fire.f4v" autoplay muted loop poster="magic.jpg"
   width =100%">
 </video>
 <hr>
