CSS 코드를 일부 적용했어요

--- a/index.html
+++ b/index.html
@@ -18,28 +18,33 @@
 
 <body style = "background-color:yellow;">
 
-<h1> <p title = "어휴 너무 오래 걸려"> 모두 안녕! </p> </h1>
+<h1>
+  <p title = "이건 툴팁이라고 한다" style = "font-family: courier;">Hello World
+  </p>
+</h1>
 <hr>
-
 <pre>
-Pre 태그를 사용하면
-이렇게 줄바꿈을 할 수
-있죠? 재밌죠?
+<p style =  color:blue;">
+<font color = "green"> 👀 Pre 태그를 사용해서</font>
+ 이렇게 <font color = "purple">줄바꿈을 할 수
+ 있죠?</font> 재밌죠? <font color ="red">색깔</font><font color = "black">도</font> <font color = "orange">넣었어요. </font><br>
+</p>
 </pre>
 
-<video
-  src="fire.f4v" autoplay muted loop poster="magic.jpg"
-  width =100%">
+
+<video src="fire.f4v" loop controls muted autoplay width ="100%">
 </video>
+
 <hr>
-<br
+<br>
 <ol type = "I">
   <a href = "p1.html"> <li>브랜드 마케팅</li></a>
-  <li>"야옹이 사진"과 난주 "톰"</li>
+  <li><b><i>야옹이와 난주 톰</i></b></li>
   <li>캠핑/랜디야츠 딩기</li>
   <li>아트플랫폼 & 웹진 <a href = "https://collected.ondp.app/">COLECTED</a></li>
   </ol>
-
+<br>
+<br>
 
 <div style = "text-align : center"> <img src = "Amateur.jpg" alt="지금은 이미지를 볼 수 없어요." width = 60%>
 
@@ -48,14 +53,14 @@ Pre 태그를 사용하면
 <h3> 홈페이지를 만들어요 </h3></div>
 
 
-<p> HTML에서 시작하는 웹개발 기초를 배운지 <strong>4일 차</strong>가 되는 날입니다. 같이 공부를 하는 친구가 있으니 재미있네요. 저는 취미가 많아서 이 역시 취미로 삼고 있지만 혹시 아나요 <em>Next.Js</em>까지 할 줄 아는 풀스택 개발자가 될지? 지금 벌여놓은 일을 수습하기에 벅차지만 (저는 하루에 6시간만 잔다구요!<abbr title="줄임말"></abbr>) 어쨌든 뭔가를 계속 배우는 건 참 즐거운 일입니다.</p>
+<p> HTML에서 시작하는 웹개발 기초를 배운지 <strong> 일주일 </strong> 되는 날입니다. 같이 공부를 하는 친구가 있으니 재미있네요. 저는 취미가 많아서 이 역시 취미로 삼고 있지만 혹시 아나요 <em>Next.Js</em>까지 할 줄 아는 풀스택 개발자가 될지? 지금 벌여놓은 일을 수습하기에 벅차지만 (저는 하루에 6시간만 잔다구요!<abbr title="줄임말"></abbr>) 어쨌든 뭔가를 계속 배우는 건 참 즐거운 일입니다.</p>
 
 </div>
 
 <hr>
 <p>
 
-<table border="1" bordercolor = "red">
+<table border="1" bordercolor = "red" style ="text-align:center;" >
   <tr>
     <td>1행 1열..</td>
     <td>1행 2열...</td>
@@ -76,8 +81,8 @@ Pre 태그를 사용하면
 오늘 점심에는 태어나서 처음으로 평양냉면을 먹었습니다. 매니아들은 정말 좋아하는 것 같던데, 저는 어떤 맛인지 감히 상상이 되지 않았어요. 혹자는 걸레 빤 물이라고 힐난을 하기도 했지만요. 뭐랄까 생각보다는 맛이 있었고 김치를 얹어 먹으니 입 안에서 폭죽이 터지는 것 같았습니다. 그러나 <a href = "https://search.naver.com/search.naver?sm=tab_hty.top&where=nexearch&query=%EC%9A%B0%EB%9E%98%EC%98%A5&oquery=%EB%A7%9E%EC%B6%A4%EB%B2%95%EA%B2%80%EC%82%AC%EA%B8%B0&tqi=hC1ErsprvmsssQ4wnI8ssssstR4-138009">면</a>을 너무 많이 줘서, 다 먹기도 전에 질려버렸습니다.
 </p>
 
-<p>
-  <small> css는 이번 주 금요일에 할 예정이네요, 동영상 재생이 안 되는 이슈가 있어서 2시간 정도를 허비했어요 이런  </small>
+<p style = "text-align:center; background-color:blue; color:white">
+  <small> 이번 주에는 HTML 끝내고 복습을 해야 해요.  </small>
 </p>
 
 
