오타를 수정했어요

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <a href = "p1.html"> <li>브랜드 마케팅</li></a>
   <li><b><i>야옹이와 난주 톰</i></b></li>
   <li>캠핑/랜디야츠 딩기</li>
-  <li>아트플랫폼 & 웹진 <a href = "https://collected.ondp.app/">COLECTED</a></li>
+  <li>NPO ART WEBZINE 웹진 <a href = "https://collected.ondp.app/">COLLECTED</a></li>
   </ol>
 <br>
 <br>
