파일 글꼴을 적용했어요

--- a/index.html
+++ b/index.html
@@ -5,32 +5,34 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-9JR8X1SBEF"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-      gtag('config', 'G-9JR8.X1SBEF');
+    gtag('config', 'G-9JR8.X1SBEF');
     </script>
-  </head>
 
+<style>
+p{font-family:"NeoDunggeunmo";}
+body{font-family:"NeoDunggeunmo";}
+</style>
+</head>
 
-
-
-<body style = "background-color:yellow;">
+<body style = "background-color:yellow;m{}">
 
 <h1>
-  <p title = "이건 툴팁이라고 한다" style = "font-family: courier;">Hello World
+  <p title = "이건 툴팁이라고 한다"> Hello World
   </p>
 </h1>
+
 <hr>
 <pre>
-<p style =  color:blue;">
+<p style =  "color:blue;">
 <font color = "green"> 👀 Pre 태그를 사용해서</font>
  이렇게 <font color = "purple">줄바꿈을 할 수
- 있죠?</font> 재밌죠? <font color ="red">색깔</font><font color = "black">도</font> <font color = "orange">넣었어요. </font><br>
+ 있죠?</font> 재밌죠? <font color ="red">색깔</font><font color = "black">도</font> <font color = "black">넣었어요. </font> <br>
 </p>
 </pre>
-
 
 <video src="fire.f4v" loop controls muted autoplay width ="100%">
 </video>
@@ -41,7 +43,7 @@
   <a href = "p1.html"> <li>브랜드 마케팅</li></a>
   <li><b><i>야옹이와 난주 톰</i></b></li>
   <li>캠핑/랜디야츠 딩기</li>
-  <li>NPO ART WEBZINE 웹진 <a href = "https://collected.ondp.app/">COLLECTED</a></li>
+  <li>ART WEBZINE <a href = "https://collected.ondp.app/">COLLECTED</a></li>
   </ol>
 <br>
 <br>
@@ -82,7 +84,7 @@
 </p>
 
 <p style = "text-align:center; background-color:blue; color:white">
-  <small> 이번 주에는 HTML 끝내고 복습을 해야 해요.  </small>
+<small> 이번 주에는 HTML 끝내고 복습을 해야 해요.  </small>
 </p>
 
 
