파비콘을 추가했어요 표도 만들었어요

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 p{font-family:"NeoDunggeunmo";}
 body{font-family:"NeoDunggeunmo";}
 </style>
+
+<title> 돌멩이네 </title>
+<link rel="icon" type='image/x-icon' href="favicon.ico">
+
 </head>
 
 <body style = "background-color:yellow;m{}">
