--- a/p1.html
+++ b/p1.html
@@ -14,35 +14,57 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <title> About Marketing </title>
     <meta charset="utf-8">
 
+    <link rel="icon" type='image/x-icon' href="favicon.ico">
+
+    <font style="color:white";>
+    </font>
+
+
+<h style = "color:white;"
+</h>
+
+<style>
+table, th, td {border: 1px solid white; border-collapse: collapse;}
+</style>
+
+
+
 </head>
 
-<body>
+<body style = "background-color: blue";>
 
-<button type=“button” class=“navyBtn” onClick=“window.open(‘http://www.daum.net’)“>버튼을 만들었어요</button>
+
 
 <h1>브랜드 마케터의 일 📚 </h1>
-<p>
-  저는 이런 일을 합니다. 그.... 모든 일을 합니다!
+  <p style="color:white";>
+
+  맨날 "어휴 바쁘다 바빠" 하는 이유는...
   <h3>💁‍♂️ 뭐냐면요</h3>
   <hr>
 </p>
-<ol>
-  <li> 마케팅 미디어믹스 기  </li>
-  <li> 검색, 배너광고 운영 </li>
-  <li> 앱 푸시 발송 </li>
-  <li> 언론 PR </li>
-  <li> 온드미디어 채널 관리 </li>
-  <li> 제휴 마케팅 캠페인 </li>
-  <li> 유저 퍼널 추적 </li>
-  <li> 콘텐츠 기획 & 제작 </li>
-  <li> 광고 소재 디자인 </li>
-  <li> 카피문구 작성 </li>
-  <li> 브랜드 전략 구상 </li>
-  <li> App Search optimization </li></li>
-  <li> 주간 뉴스레터 발행 </li>
-  <li> 마케팅 중장기 로드맵 수립</li>
+<ol style = "color:yellow";>
+  <li>신규획득</li>
+  <li>리텐션 유지 </li>
+  <li>언론 PR & 제휴 </li>
 </ol>
-<h3>🤸‍♂️ 뭐든지 다 한다</h3>
+
+<h3>😁 표로 그려보면 </h3>
+<table style= "width:30%">
+  <tr>
+  <th style="width:60%"> 메인업무 </th> <th> 서브업무</th> <th>난이도</th>
+  </tr>
+  <tr>
+    <td> 마케팅 미디어믹스 </td> <td> 광고 소재 디자인 </td>
+    <tr>
+    <td> 온드 미디어 </td> <td> 인스타툰 그리기 </td>
+  </tr>
+    <td> 리텐션 유지 </td> <td> 앱 푸시, 뉴스레터 </td>
+  <tr>
+    <td> 언론 PR </td> <td> 미디어리스트 관리 </td>
+  </tr>
+</table>
+
+<h3>🤸‍♂️ 그렇다니까요</h3>
 <hr>
 <img src="에라.png" alt="몰?루" width="30%">
 
