Iframe을 배웠어요

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     </script>
 
 <style>
-p{font-family:"NeoDunggeunmo";}
 body{font-family:"NeoDunggeunmo";}
 </style>
 
@@ -25,7 +24,7 @@ body{font-family:"NeoDunggeunmo";}
 <body style = "background-color:yellow;m{}">
 
 <h1>
-  <p title = "이건 툴팁이라고 한다"> Hello World
+  <p title = "이건 툴팁이라고 한다"> 🌍 Hello World
   </p>
 </h1>
 
@@ -37,6 +36,30 @@ body{font-family:"NeoDunggeunmo";}
  있죠?</font> 재밌죠? <font color ="red">색깔</font><font color = "black">도</font> <font color = "black">넣었어요. </font> <br>
 </p>
 </pre>
+
+<h1 id="changeText"> 버튼을 누르면 바뀝니다 </h1>
+<button onclick="displayResult()"> 눌러보세요 👀 </button>
+
+<br>
+<br>
+
+<script>
+function displayResult() {
+  document.getElementById("changeText").innerHTML = "모두 사랑해요!";
+}
+</script>
+
+<div>
+<iframe src = "https://github.com/ekf1121/Okay-Go-"name="iframe_a" height="200px" width="100%" title="메롱">
+</iframe>
+</div>
+
+<a href="https://blog.naver.com/ekf1121_/222702860968"
+target = "iframe_a"> 다시 시도해 보세요! </a>
+
+
+<br>
+<br>
 
 <video src="fire.f4v" loop controls muted autoplay width ="100%">
 </video>
