Class에서 색을 지정하는 방법을 배웠어요

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="utf-8">
     <title> CSS3 실습 </title>
 
-    <style media="screen">
-      .center {text-align:center;}
+<style>
+      .center {text-align:center; color:white;}
       a {text-decoration:none; text-decoration-color:gray;}
-    </style>
-  </head>
-  <body>
+      h1,h2,h3 {color:white}
+      body{background-color:#7f8fa6;}
+</style>
+</head>
 
+<body>
 <h1 class="center"> 🎨 시작해보자 캐스케이딩 스타일 시트 CSS3 </h1>
 <hr>
 <br>
