div 태그를 활용하여 배경 이미지를 지정했어요

--- a/index.html
+++ b/index.html
@@ -5,21 +5,28 @@
     <title> CSS3 실습 </title>
 
 <style>
-      .center {text-align:center; color:white;}
-      a {text-decoration:none; text-decoration-color:gray;}
+      .center{text-align:center; color:white;}
+      .bg1{background:url('finn.png');}
+      a {text-decoration:none; text-decoration-color:black;}
       h1,h2,h3 {color:white}
-      body{background-color:#7f8fa6;}
+      body{background-color:#7f8fa6;
+      background-image: url('finn.png');}
+
 </style>
 </head>
+<header>
+<h1 class="center";> 🎨 시작해보자 캐스케이딩 스타일 시트 CSS3 </h1>
+<hr><br>
+</header>
 
 <body>
-<h1 class="center"> 🎨 시작해보자 캐스케이딩 스타일 시트 CSS3 </h1>
-<hr>
+
+<div class="bg1">
 <br>
 <div style="text-align:center;">
-<button style= "display:inline-block;"> <a href="past.html"> 페이지 이동 </a>
+<button style= "background-color: #e84118; display:inline-block;"> <a href="past.html"> 페이지 이동 </a>
 </div>
 
+</div>
 </body>
-
 </html>
