목록 nav 나열, 이미지맵 적용을 시도했어요
생각처럼 되지는 않았지만...

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko" dir="ltr">
-  <head>
+<head>
     <meta charset="utf-8">
     <title> 돌멩이 낙서장 </title>
 
 <style>
       .center{text-align:center; color:white;}
-      a {text-decoration:none; text-decoration-color:black;}
+      a {text-decoration:none; text-decoration-color:white;}
       h1,h2,h3 {color:white}
       body{background-color:#7f8fa6;}
       div.first{background-image: url('finn.png'); height:2000px;
@@ -18,8 +18,7 @@
       nav ul li {list-style-type:none;
       display: inline-block; color:white;
       margin:20px;
-      align-items: center;>
-
+      align-items: center;>}
 </style>
 </head>
 
@@ -28,10 +27,10 @@
 <h1 class="center";> 🎨 CSS3 연습장 </h1>
 <hr>
 <nav>
-<ul>
-<li> 다람쥐 </li>
-<li> 야옹이 </li>
-<li> 코린이 </li>
+<ul style="text-align:center";>
+<li> <a href="https://namu.wiki/w/%EB%8B%A4%EB%9E%8C%EC%A5%90">다람쥐</a> </li>
+<li> <a href="https://blog.naver.com/PostList.naver?blogId=ekf1121_&categoryNo=7&from=postList">야옹이</a></li>
+<li> <a href="https://blog.naver.com/PostList.naver?blogId=ekf1121_&from=postList&categoryNo=61&parentCategoryNo=61">코린이</a> </li>
 </ul>
 </nav>
 
@@ -42,6 +41,8 @@
     <div style="text-align:center;">
     <button style= "background-color: #e84118; display:inline-block;"> <a href="past.html"> 페이지 이동 </a>
     </div>
+
+<img src="rsp.png" alt="울룩불룩공주" width="50%";>
 </div>
 
 
